Fix empty spacing under panel icons

--- a/elements/upfront-image/css/uimage.css
+++ b/elements/upfront-image/css/uimage.css
@@ -1572,7 +1572,7 @@ div.uimage-controls i.upfront-icon:before,
 	opacity: 0.5;
 }
 
-.upfront-control-dialog-open:after {
+.image-edit-control-panel-item:after {
     content: '';
     width: 100%;
     height: 6px;
